--- a/frontend/app/templates/encryptables/file-entries/new.hbs
+++ b/frontend/app/templates/encryptables/file-entries/new.hbs
@@ -1,1 +1,1 @@
-<FileEntry::Form @account={{this.model}} @title={{t "file_entries.new.title"}}/>
+<FileEntry::Form @encryptable={{this.model}} @title={{t "file_entries.new.title"}}/>
