--- a/frontend/app/templates/components/account/row.hbs
+++ b/frontend/app/templates/components/account/row.hbs
@@ -14,9 +14,9 @@
       </div>
       <div class="col"></div>
     {{else}}
-      <div class="col-auto pr-0" role="button" {{on "click" this.transitionToAccount}}>
+      <LinkTo class="col-auto pr-0 account-link" @route="accounts.show" @model={{@account.id}}>
         <img class="img d-inline w-30 float-left icon-big-button" src="/assets/images/key.svg" alt="key">
-      </div>
+      </LinkTo>
       <LinkTo class="col-4 underline-hover break-words account-link" @route="accounts.show" @model={{@account.id}}>
         {{@account.accountname}}
       </LinkTo>
