Add functionality to display files

--- a/frontend/app/templates/components/encryptable-file/row.hbs
+++ b/frontend/app/templates/components/encryptable-file/row.hbs
@@ -1,5 +1,5 @@
 <tr>
-  <td><a href={{this.downloadLink}} target="_blank" rel="noopener">{{@fileEntry.filename}}</a></td>
+  <td><a  target="_blank" rel="noopener">{{@fileEntry.filename}}</a></td>
   <td>{{@fileEntry.description}}</td>
   <td>
     <DeleteWithConfirmation @record={{@fileEntry}}>
