Fixed test. All tests pass now.

--- a/frontend/app/templates/components/admin/user/table.hbs
+++ b/frontend/app/templates/components/admin/user/table.hbs
@@ -26,8 +26,7 @@
         </span>
       </th>
       <th>
-        {{t "admin.users.index.auth"}}
-        {{t "admin.users.index.provider_uid"}}
+        {{t "admin.users.index.auth"}} {{t "admin.users.index.provider_uid"}}
         <span role="button" {{action "sortBy" "auth"}}>
           <img class="icon-big-button float-right" src="/assets/images/angle-down-blue.svg" alt="v">
         </span>
