improve sort functions for last_login_at and auth/UID, add tests

--- a/frontend/app/templates/components/admin/user/table.hbs
+++ b/frontend/app/templates/components/admin/user/table.hbs
@@ -3,37 +3,37 @@
     <tr>
       <th>
         {{t "admin.users.index.username"}}
-        <span role="button" {{action "sortBy" "username"}}>
+        <span role="button" {{action "sortBy" "username"}} id="sort-username">
           <img class="icon-big-button float-right" src="/assets/images/angle-down-blue.svg" alt="v">
         </span>
       </th>
       <th>
         {{t "admin.users.index.name"}}
-        <span role="button" {{action "sortBy" "givenname"}}>
+        <span role="button" {{action "sortBy" "givenname"}} id="sort-name">
           <img class="icon-big-button float-right" src="/assets/images/angle-down-blue.svg" alt="v">
         </span>
       </th>
       <th>
         {{t "admin.users.index.last_login_at"}}
-        <span role="button" {{action "sortBy" "last_login_at"}}>
+        <span role="button" {{action "sortBy" "last_login_at"}} id="sort-login-a"t>
           <img class="icon-big-button float-right" src="/assets/images/angle-down-blue.svg" alt="v">
         </span>
       </th>
       <th>
         {{t "admin.users.index.last_login_from"}}
-        <span role="button" {{action "sortBy" "last_login_from"}}>
+        <span role="button" {{action "sortBy" "last_login_from"}} id="sort-login-from">
           <img class="icon-big-button float-right" src="/assets/images/angle-down-blue.svg" alt="v">
         </span>
       </th>
       <th>
         {{t "admin.users.index.auth"}} {{t "admin.users.index.provider_uid"}}
-        <span role="button" {{action "sortBy" "auth"}}>
+        <span role="button" {{action "sortBy" "auth"}} id="sort-auth">
           <img class="icon-big-button float-right" src="/assets/images/angle-down-blue.svg" alt="v">
         </span>
       </th>
       <th width="200">
         {{t "admin.users.index.role"}}
-        <span role="button" {{action "sortBy" "role"}}>
+        <span role="button" {{action "sortBy" "role"}} id="sort-role">
           <img class="icon-big-button float-right" src="/assets/images/angle-down-blue.svg" alt="v">
         </span>
       </th>
