Extended sort-test and corrected typo

--- a/frontend/app/templates/components/admin/user/table.hbs
+++ b/frontend/app/templates/components/admin/user/table.hbs
@@ -15,7 +15,7 @@
       </th>
       <th>
         {{t "admin.users.index.last_login_at"}}
-        <span role="button" {{action "sortBy" "last_login_at"}} id="sort-login-a"t>
+        <span role="button" {{action "sortBy" "last_login_at"}} id="sort-login-at">
           <img class="icon-big-button float-right" src="/assets/images/angle-down-blue.svg" alt="v">
         </span>
       </th>
