--- a/frontend/app/templates/components/password-strength-meter.hbs
+++ b/frontend/app/templates/components/password-strength-meter.hbs
@@ -1,4 +1,4 @@
-{{t "encryptables.edit.password_strength"}}: {{if this.scoreRanking (t (concat "encryptables.edit.password_strengths."  this.scoreRanking))}}
+{{#if this.password}}{{t "encryptables.edit.password_strength"}} : {{/if}} {{if this.scoreRanking (t (concat "encryptables.edit.password_strengths."  this.scoreRanking))}}
 <div class="progress">
   <div class="progress-bar {{progressClass}}" role="progressbar"  aria-valuenow={{this.barWidth}} aria-valuemin="0" aria-valuemax="100">
   </div>
