--- a/frontend/app/templates/components/api-user/table-row.hbs
+++ b/frontend/app/templates/components/api-user/table-row.hbs
@@ -25,11 +25,11 @@
     {{/if}}
   </td>
   <td>
-    <XToggle @theme="material" @value={{@apiUser.locked}} @onToggle={{fn this.toggleApiUser @apiUser}} />
+    <XToggle @theme="ios" @size="small" @variant="auto" @value={{@apiUser.locked}} @onToggle={{fn this.toggleApiUser @apiUser}} />
   </td>
   {{#if this.args.parent.isAllowedToUpdateDefaultCcliUser}}
     <td>
-      <XToggle @theme="material" @value={{this.isDefaultCcliUser}} @onToggle={{fn this.setDefaultCcliUser @apiUser}} />
+      <XToggle @theme="ios" @size="small" @variant="auto" @value={{this.isDefaultCcliUser}} @onToggle={{fn this.setDefaultCcliUser @apiUser}} />
     </td>
   {{/if}}
   <td>
