--- a/frontend/app/templates/components/team/show.hbs
+++ b/frontend/app/templates/components/team/show.hbs
@@ -27,7 +27,7 @@
           <img class="icon-big-button" src="/assets/images/plus-white.svg" alt="new">
           <BsTooltip @title={{t "tooltips.add_folder"}} @delayShow="1000" />
         </span>
-        {{!#unless @team.personal_team}}
+        {{#unless @team.personal_team}}
           <span class="mx-1" role="button" {{on "click" this.toggleTeamEdit}}>
             <img class="icon-big-button" src="/assets/images/edit-white.svg" alt="edit">
             <BsTooltip @title={{t "teams.edit.title"}} @delayShow="1000" />
@@ -46,7 +46,7 @@
             <img class="icon-big-button" src="/assets/images/star-white{{if @team.favourised "-filled"}}.svg" alt="star">
             <BsTooltip @title={{if @team.favourised (t "teams.defavorise") (t "teams.favorise")}} @delayShow="1000" />
           </span>
-        {{!/unless}}
+        {{/unless}}
       </div>
 
       <BsDropdown @class="d-sm-none mb-0 col-auto mobile-team-menu" as |dd|>
