--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -95,6 +95,10 @@
           <pzsh-icon name="setting"></pzsh-icon>
           {{ t "profile_title" }}
         </LinkTo>
+        <LinkTo role="button" @route="log" @tagName="pzsh-menu-dropdown-item">
+          <pzsh-icon name="setting"></pzsh-icon>
+          {{ t "log" }}
+        </LinkTo>
         <pzsh-menu-dropdown-item href="/session/destroy">
           <pzsh-icon name="sign-out-alt"></pzsh-icon>
           {{ t "logout" }}
