show different icon for personal team

--- a/frontend/app/templates/components/team/show.hbs
+++ b/frontend/app/templates/components/team/show.hbs
@@ -11,10 +11,14 @@
   <div>
     <div class="row py-2 d-flex team-card-header {{if this.collapsed "rounded" "rounded-top"}}">
       <div class="col-auto pr-0 my-auto" role="button" {{on "click" this.collapse}}>
-        {{#if this.args.team.private}}
-          <img class="icon icon-big-button py-auto" src="/assets/images/encrypted_small-white.svg" alt="">
+        {{#if @team.personal_team}}
+            <img class="icon icon-big-button py-auto" src="/assets/images/member-white.svg" alt="">
         {{else}}
-          <img class="icon icon-big-button py-auto" src="/assets/images/members-white.svg" alt="">
+          {{#if this.args.team.private}}
+            <img class="icon icon-big-button py-auto" src="/assets/images/encrypted_small-white.svg" alt="">
+          {{else}}
+            <img class="icon icon-big-button py-auto" src="/assets/images/members-white.svg" alt="">
+          {{/if}}
         {{/if}}
       </div>
       <div class="col overflow-hidden" role="button" {{on "click" this.collapse}}>
