Fix log model not found error

--- a/frontend/app/templates/components/encryptable/table-row.hbs
+++ b/frontend/app/templates/components/encryptable/table-row.hbs
@@ -1,44 +1,3 @@
-<tr class="api-user-row">
-  <td>
-    <Input @class={{"vw-8"}} @enter={{fn this.updateApiUser @encryptable}} @focus-out={{fn this.updateApiUser @encryptable}} @type={{"text"}} @value={{@encryptable.description}} @placeholder={{t "profile.api_users.enter_description"}} />
-  </td>
-  <td>
-    <div>
-      {{#if @encryptable.validUntil}}
-        {{moment-format @encryptable.validUntil "DD.MM.YYYY hh:mm"}}
-      {{/if}}
-    </div>
-  </td>
-  <td>
-    <PowerSelect @options={{this.validityTimes}} @selected={{this.selectedValidFor}} @onChange={{fn this.updateValidFor @encryptable}}
-                 @renderInPlace={{true}} as |validityTime|>
-      {{t validityTime.label}}
-    </PowerSelect>
-  </td>
-  <td>
-    {{#if @encryptable.lastLoginAt}}
-      {{t "profile.api_users.at"}} {{moment-format @encryptable.lastLoginAt "DD.MM.YYYY hh:mm"}}
-    {{/if}}
-    {{#if @encryptable.lastLoginFrom}}
-      <br> {{t "profile.api_users.from"}} {{@encryptable.lastLoginFrom}}
-    {{/if}}
-  </td>
-  <td>
-    <XToggle @theme="ios" @size="small" @variant="auto" @value={{@encryptable.locked}} @onToggle={{fn this.toggleApiUser @encryptable}} />
-  </td>
-  {{#if this.args.parent.isAllowedToUpdateDefaultCcliUser}}
-    <td>
-      <XToggle @theme="ios" @size="small" @variant="auto" @value={{this.isDefaultCcliUser}} @onToggle={{fn this.setDefaultCcliUser @encryptable}} />
-    </td>
-  {{/if}}
-  <td>
-    <a role="button" {{on "click" (fn this.renewApiUser @encryptable)}}><img src="/assets/images/refresh.svg" alt="refresh" class="icon-button"></a>
-    <DeleteWithConfirmation @class="" @record={{@encryptable}}>
-      <img src="/assets/images/remove.svg" alt="remove" class="icon-button">
-    </DeleteWithConfirmation>
-    <a role="button" {{on "click" (fn this.copyCcliLogin @apiUser)}}>
-      <img src="/assets/images/clipboard.svg" alt="clipboard" class="icon-button">
-      <BsTooltip @title={{t "flashes.api.api-users.ccli_login.tooltip"}} @delayShow="700" />
-    </a>
-  </td>
+<tr>
+  @logs
 </tr>
