--- a/frontend/app/templates/components/encryptable/table.hbs
+++ b/frontend/app/templates/components/encryptable/table.hbs
@@ -4,33 +4,19 @@
   </div>
 {{/if}}
 
-<div class="container my-2">
-  <div class="row justify-content-end">
-    <div class="col-auto">
-      <button class="btn btn-primary" {{on "click" this.createApiUser}}>{{t "new"}}</button>
-    </div>
-  </div>
-</div>
-
-{{#if @encryptables}}
+{{#if @encryptable}}
   <table class="table table-striped mt-20 mb-15">
     <tbody>
       <tr>
         <th> {{t "username"}} </th>
         <th> {{t "description" }} </th>
-        <th> {{t "profile.api_users.valid_until"}} </th>
-        <th> {{t "profile.api_users.valid_for"}} </th>
-        <th> {{t "profile.api_users.last_login"}} </th>
-        <th> {{t "profile.api_users.locked"}} </th>
-        {{#if this.isAllowedToUpdateDefaultCcliUser }}
-          <th> {{t "profile.api_users.ccli_default_user"}} </th>
-        {{/if}}
-        <th> {{t "actions"}} </th>
+        <th> {{t "actions" }} </th>
       </tr>
     </tbody>
     <tbody>
-      {{#each @encryptables as |encryptable|}}
-        <Encryptable::TableRow @encryptable={{encryptable}} @parent={{this}} />
+      {{@encryptable.logs}}
+      {{#each @encryptable.log as |l|}}
+        <Encryptable::TableRow @logs={{l}} />
       {{/each}}
     </tbody>
   </table>
