--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -55,7 +55,7 @@
       {{/unless}}
       <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
         <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
-        <BsTooltip @title={{t "tooltips.delete_account"}} @delayShow="1000" />
+        <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="1000" />
       </DeleteWithConfirmation>
     </div>
   </div>
