--- a/frontend/app/templates/components/folder/show.hbs
+++ b/frontend/app/templates/components/folder/show.hbs
@@ -15,7 +15,7 @@
     <div class="col-auto justify-content-between d-flex align-items-center align-right-on-smartphone">
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleEncryptableCreating}}>
         <img class="icon-big-button " src="/assets/images/plus-blue.svg" alt="new">
-        <BsTooltip @title={{t "tooltips.add_account"}} @delayShow="1000" />
+        <BsTooltip @title={{t "tooltips.add_encryptable"}} @delayShow="1000" />
       </a>
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleFolderEdit}}>
         <img class="icon-big-button " src="/assets/images/edit-blue.svg" alt="edit folder">
