--- a/frontend/app/templates/components/encryptable/table-row.hbs
+++ b/frontend/app/templates/components/encryptable/table-row.hbs
@@ -1,5 +1,5 @@
 <tr>
-  <td>>{{@logs.whodunnit}}</td>
+  <td>{{@logs.whodunnit}}</td>
   <td>{{@logs.created_at}}</td>
   <td>{{@logs.action}}</td>
 </tr>
