Fix backend to frontend serialization

--- a/frontend/app/templates/components/encryptable/table.hbs
+++ b/frontend/app/templates/components/encryptable/table.hbs
@@ -13,7 +13,7 @@
       </tr>
     </tbody>
     <tbody>
-      {{#each @encryptable.logs as |l|}}
+      {{#each @encryptable.paperTrailVersions as |l|}}
         <Encryptable::TableRow @logs={{l}} />
       {{/each}}
     </tbody>
