--- a/frontend/app/templates/components/encryptable/table-row.hbs
+++ b/frontend/app/templates/components/encryptable/table-row.hbs
@@ -1,5 +1,5 @@
 <tr>
+  <td>{{@paperTrailVersion.event}}</td>
   <td>{{@paperTrailVersion.whodunnit}}</td>
-  <td>{{@paperTrailVersion.created_at}}</td>
-  <td>{{@paperTrailVersion.action}}</td>
+  <td>{{moment-format @paperTrailVersion.createdAt "DD.MM.YYYY hh:mm"}}</td>
 </tr>
