default folder gets created

--- a/frontend/app/templates/components/folder/show.hbs
+++ b/frontend/app/templates/components/folder/show.hbs
@@ -17,6 +17,7 @@
         <img class="icon-big-button " src="/assets/images/plus-blue.svg" alt="new">
         <BsTooltip @title={{t "tooltips.add_encryptable"}} @delayShow="1000" />
       </a>
+      {{#unless @folder.team.personal_team}}
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleFolderEdit}}>
         <img class="icon-big-button " src="/assets/images/edit-blue.svg" alt="edit folder">
         <BsTooltip @title={{t "folders.tooltips.edit"}} @delayShow="1000" />
@@ -25,6 +26,7 @@
         <img class="icon-big-button d-inline my-auto" src="/assets/images/delete-blue.svg" alt="delete folder">
         <BsTooltip @title={{t "tooltips.delete_folder"}} @delayShow="1000" />
       </DeleteWithConfirmation>
+       {{/unless}}
     </div>
     <div class="col-auto pl-0 justify-content-between d-flex align-items-center">
       <span role="button" name="folder-collapse" {{on "click" this.toggleExpanded }}>
