reload logs when switching tabs, fix linting errors

--- a/frontend/app/templates/components/encryptable/table.hbs
+++ b/frontend/app/templates/components/encryptable/table.hbs
@@ -7,7 +7,7 @@
     </tr>
   </tbody>
   <tbody>
-    {{#each @encryptable.paperTrailVersions as |paperTrailVersion|}}
+    {{#each @logs as |paperTrailVersion|}}
       <Encryptable::TableRow @paperTrailVersion={{paperTrailVersion}}/>
     {{/each}}
   </tbody>
