--- a/frontend/app/templates/personal_logs.hbs
+++ b/frontend/app/templates/personal_logs.hbs
@@ -6,6 +6,6 @@
         <h2>{{t "log.info"}}</h2>
       </div>
     </div>
-    <Log::Table @personal_log={{this.personal_log}}/>
+    <Personal-Log::Table @personal_log={{this.personal_log}}/>
   </div>
 </div>
