personal log now loads logs from backend, first working version

--- a/frontend/app/templates/components/personal-log/table.hbs
+++ b/frontend/app/templates/components/personal-log/table.hbs
@@ -8,7 +8,8 @@
   </thead>
   <tbody>
     {{#each @personal_log as |paperTrailVersion|}}
-      <Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
+      <Personal-Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
     {{/each}}
+    <Personal-Log::TableRow @paperTrailVersion={{paperTrailVersion}}/>
   </tbody>
 </table>
